# dnd-dm-toolbox

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.dev  FORMAT_TEXTE.md  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  REFACTORE.md  ROADMAP.md  TODO.md  build.sh  create_plugin.sh  docker-compose.yml  setup_dependencies.sh
.github/workflows/: ci.yml  release.yml
database/: MIGRATION_RACES_README.md  README.md  init_db.sh  init_sqlite.sql
database/init/: 01_create_equipement_schema.sql  01_create_races_schema.sql  02_create_classes_schema.sql  02_create_sorts.sql  02_seed_races.sql  03_create_races_schema.sql  03_seed_classes.sql  04_create_classes_schema.sql  05_create_historique_schema.sql  05_seed_spells_sample.sql  06_aidedd_spells.sql  06_create_player_caratere_schema.sql  08_aidedd_weapons.sql  10_aidedd_equipment.sql  11_new_race_schema.sql
database/init/old/: 00_game_data_schema.sql  01_create_schema.sql  02_seed_data.sql  04_seed_skills_equipment.sql  07_aidedd_monsters.sql  09_aidedd_armor.sql  11_new_race_schema.sql  12_migrate_race_data.sql  races_complete.sql
include/core/: Application.h  EventBus.h  Logger.h  SaveFileManager.h  ServiceBus.h  ToolBase.h  ToolRegistry.h  utils.h
include/database/: DatabaseManager.h
include/database/repositories/: ClassRepository.h  RaceRepository.h
include/dnd/: Ability.h  Character.h  Dice.h  Skill.h
include/ui/: CharacterCreatorWindow.h  ContextualHelpWindow.h  DiceRollerWindow.h  MarkdownRenderer.h  TextFormatter.h
plugins_src/character_creator/: CharacterCreatorTool.cpp  CharacterCreatorTool.h  character_creator.manifest.json
plugins_src/log_viewer/: LogViewerTool.cpp  log_viewer.manifest.json
plugins_src/note/: note.manifest.json
resources/aide/: QUICKSTART.md  QUICK_START_PLUGIN.md  TEXTFORMATTER_USAGE.md
resources/images/: .gitignore  COPYRIGHT.md
resources/scraped_data/: gear.json  monsters.json
resources/tools/generate_plugin/: TemplateTool.cpp  generate_plugin.py  template.manifest.json
resources/tools/generate_plugin/schemas/: race_dd_5_5_schema.sql
resources/tools/generate_plugin/templates/: TemplateTool.cpp  TemplateTool.h  repository.cpp.template  repository.h.template
resources/tools/generate_repo/: generate_repo.py
resources/tools/generate_repo/templates/: repository.cpp.template  repository.h.template
scraped_data/: armor.json  magic_items.json  spells.json  weapons.json
src/: main.cpp  main_new.cpp
src/core/: Application.cpp  EventBus.cpp  Logger.cpp  SaveFileManager.cpp  ServiceBus.cpp  ToolBase.cpp  ToolRegistry.cpp
src/database/: DatabaseManager.cpp
src/database/repositories/: ClassRepository.cpp  RaceRepository.cpp
src/plugins/character_creator/: CharacterCreatorTool.cpp  CharacterCreatorTool.h
src/plugins/classe_manager/: ClasseManagerRepository.cpp  ClasseManagerRepository.h  ClasseManagerTool.cpp  ClasseManagerTool.h  ClasseManagerTool_edit_classe.cpp  ClasseManagerTool_edit_subtables.cpp  ClasseManagerTool_helpers.h  ClasseManagerTool_lifecycle.cpp  ClasseManagerTool_tab_aptitudes.cpp  ClasseManagerTool_tab_arbre.cpp  ClasseManagerTool_tab_classe.cpp  ClasseManagerTool_tab_equipement.cpp  ClasseManagerTool_tab_evolutions.cpp  classe_manager.manifest.json  classe_manager_schema.sql  seed_rodeur.sql
src/plugins/classe_manager/tab/: ClasseManagerTab_Aptitude.cpp  ClasseManagerTab_Aptitude.h  ClasseManagerTab_Arbre.cpp  ClasseManagerTab_Arbre.h  ClasseManagerTab_Classe.cpp  ClasseManagerTab_Classe.h  ClasseManagerTab_Equipement.cpp  ClasseManagerTab_Equipement.h  ClasseManagerTab_Evolution.cpp  ClasseManagerTab_Evolution.h
src/plugins/debug_monitor/: DebugMonitorTool.cpp  DebugMonitorTool.h  debug_monitor.manifest.json
src/plugins/dice_roller/: DiceRollerTool.cpp  DiceRollerTool.h  dice_roller.manifest.json
src/plugins/log_viewer/: LogViewerTool.h
src/plugins/note/: NoteTool.cpp  NoteTool.h  note.manifest.json
src/plugins/race_dd_5_5/: RaceDd55Repository.cpp  RaceDd55Repository.h  RaceDd55Tool.cpp  RaceDd55Tool.h  race_dd_5_5.manifest.json  race_dd_5_5_schema.sql  race_dd_5_5_seed.sql
src/ui/: CharacterCreatorWindow.cpp  ContextualHelpWindow.cpp  DiceRollerWindow.cpp  MarkdownRenderer.cpp  TextFormatter.cpp
tools/: README.md  equipment_to_sql.py  json_to_sql.py  scraper_aidedd.py  scraper_aidedd_v2.py  scraper_equipment.py  test_columns.py  test_scraper.py  test_spell_detail.py
